getUsuarioById ahora retorna los eventos a los que dicho usuario confirmo asistencia
